--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 </head>
 <body>
     <h1>POOKIE</h1>
-    <img src="images\pookie.png">
+    <img src="pookie.png">
     <h2>SPOOKIE</h2>
-    <img src="images\spookie.jpeg">
+    <img src="spookie.jpeg">
     <h3>SARANGHAEYO</h3>
-    <img src="images\sarang.png" >
+    <img src="sarang.png" >
     <h4>GAY_O</h4>
-    <img src="images\gay.jpeg">
+    <img src="gay.jpeg">
     <h5>SAME_SAME</h5>
-    <img src="images\different.jpeg" >
+    <img src="different.jpeg" >
     <h6>NO_MONEY</h6>
-    <img src="images\no_honey.png">
+    <img src="no_honey.png">
 </body>
 </html>
